tests/invalid/struct/replace_moved_field.facet
struct Slot {
  x: affine isize,
  y: unrestricted bool
}

fn main() -> affine isize {
  let mut p: affine Slot = Slot { x = 1, y = true };
  let _ = p.x;
  (replace p.x 2)
}
